[tool.poetry]
name = "retro-pi-tv"
version = "0.0.1-dev"
description = "Retro TV for Raspberry Pi"
authors = ["David Cooper <david@dtcooper.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mpv = "^1.0.5"
pygame-ce = "^2.4.0"
tomlkit = "^0.12.3"
watchfiles = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
ipdb = "^0.13.13"
ipython = "^8.20.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
preview = true

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_sort_within_sections = true
combine_as_imports = true
