[tool.poetry]
name = "vintage-pi-tv"
version = "0.0.1-dev"
description = "vintage TV for Raspberry Pi"
authors = ["David Cooper <david@dtcooper.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
janus = "^1.0.0"
mpv = "^1.0.5"
numpy = "^1.26.4"
pygame-ce = "^2.4.1"
schema = "^0.7.5"
starlette = "^0.37.2"
tomlkit = "^0.12.4"
uvicorn = "^0.27.1"
watchfiles = "^0.21.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
ipdb = "^0.13.13"
ipython = "^8.22.2"
isort = "^5.13.2"

[tool.poetry.group.keyboard.dependencies]
evdev = {version = "^1.7.0", platform = "linux"}
pyudev = { version = "^0.24.1", platform = "linux" }

[tool.poetry.scripts]
tv = 'vintage_pi_tv.__main__:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
preview = true
enable-unstable-feature = [
    "multiline_string_handling", "string_processing", "wrap_long_dict_values_in_parens",
    "hex_codes_in_unicode_sequences", "hug_parens_with_braces_and_square_brackets"
]

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_sort_within_sections = true
combine_as_imports = true
