[tool.poetry]
name = "vintage-pi-tv-docs"
version = "1.0.0"
description = "Documentation for Vintage Pi TV"
authors = ["David Cooper <david@dtcooper.com>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.10"
mkdocs-same-dir = "^0.1.3"
mkdocs-macros-plugin = "^1.0.5"
schema = "^0.7.5"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
